crates/paideia-as-diagnostics/tests/snapshots/render_human__synthetic_e0001_color_off.snap
---
source: crates/paideia-as-diagnostics/tests/render_human.rs
assertion_line: 28
expression: rendered
---
error[E0001]: unexpected token

  --> test.pdx:1:5
   |
 1 | abc xyz
   |     ^^^
